--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
                     <input class="form-control" type="text" id="first_name" name="first_name" required>
                 </div>
                 <div class="form-group mb-4">
-                    <label for="last_name">Lasty Name:</label>
+                    <label for="last_name">Last Name:</label>
                     <input class="form-control" type="text" id="last_name" name="last_name" required>
                 </div>
                 <div class="form-group mb-4">
@@ -42,7 +42,18 @@
                         <label class="btn btn-outline-secondary" for="student">Student</label>
                     </div>
                 </div>
+
                 <button class="btn btn-secondary mb-4" type="submit">Submit</button>
+
+                {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                <div class="alert alert-success">
+                    {% for message in messages %}
+                        {{message}}
+                    {% endfor %}
+                </div>
+                {% endif %}
+                {% endwith %}
             </form>
         </div>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
